--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1272,4 +1272,4 @@ article.item a {
 .teammember img {max-width:120px;margin:0 auto;}
 
 
-.module-standard iframe {width:100%; border:none;}
+.module-standard iframe {width:100%; border:none;margin:2em 0 0 1em;}
