--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1273,3 +1273,15 @@ article.item a {
 
 
 .module-standard iframe {width:100%; border:none;margin:2em 0 0 1em;}
+.contact-box {
+  display:block;
+  margin-top:2em;
+  margin-bottom:1em;
+}
+
+.contact-box {}
+.contact-box span {display:block;}
+.contact-box h2 {}
+.contact-box {}
+.contact-box {}
+.contact-box {}
