--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1213,19 +1213,23 @@ article.item a {
 
 .artist_show {
       display: block;
-      padding: 1em 1em;
-      background: #F9F9F9;
+      padding: 1.25em 1.5em;
+      background: #E1CB94;
       text-align: center;
-      color: #000;
-      border: 1px solid #efefef;
+      color: #FFF;
+      border-bottom: 2px solid #B9A982;
       font-size: 0.8em;
       margin-bottom: 1em;
+      line-height: 1.6em;
 }
 .artist_show:hover {
+  text-decoration:none;
+  color:white;
+  opacity:0.8;
 }
-.artist_show .pretitle {display: block;text-transform: uppercase;font-size: 1em;color: #000000;}
+.artist_show .pretitle {text-transform: uppercase;font-size: 1em;color: #000000;font-weight: bold;}
 
-.artist_show .title {font-weight: bold;font-size: 1.45em;display: block;margin-top: 0.25em;margin-bottom: 0.4em;}
+.artist_show .title {font-weight: 400;font-size: 1.35em;display: block;margin-top: 0.25em;margin-bottom: 0.4em;}
 
 
 .menu-icon {
