--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1200,17 +1200,17 @@ article.item a {
       padding: 1.25em 1.5em;
       background: #E1CB94;
       text-align: center;
-      color: #FFF;
+      color: rgb(0, 0, 0);
       border-bottom: 2px solid #B9A982;
       font-size: 0.8em;
       margin-bottom: 1em;
       line-height: 1.6em;
-        -webkit-transition: opacity 0.2s ease-in;
-  transition: opacity 0.2s ease-in;
+      -webkit-transition: opacity 0.2s ease-in;
+      transition: opacity 0.2s ease-in;
 }
 .artist_show:hover {
   text-decoration:none;
-  color:white;
+  color:black;
   opacity:0.8;
 }
 .artist_show .pretitle {text-transform: uppercase;font-size: 1em;color: #000000;font-weight: bold;}
