--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -944,23 +944,26 @@ aside .embed-responsive {
 
 .module.module-process .fa {
   background: #E1CB94;
-  font-size: 2.5em;
+  font-size: 4.5em;
   color: white;
   border-radius: 10em;
   padding: 0.6em;
-  left: -1em;
+  margin: 0 auto 0.2em auto;
+  display: block;
+  width: 2.3em;
+  text-align: center;
 }
 
 .module.module-process .fa:after {
   counter-increment: section;
-  content: counters(section, ".") " ";
+  content: counters(section, "i") " ";
   position: absolute;
-  top: -0.25em;
-  right: -0.25em;
+  top: -0em;
+  right: 2.5em;
   background: #E1CB94;
   border-radius: 5em;
   font-size: 0.5em;
-  color: black;
+  color: white;
   padding: 0.3em 0.5em;
 }
 
@@ -1023,6 +1026,7 @@ aside .embed-responsive {
 .module.module-process {
   padding-bottom: 3em;
   padding-top: 3em;
+  text-align: center;
 }
 
 .content_toggle:before {
