--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -948,7 +948,7 @@ aside .embed-responsive {
   color: white;
   border-radius: 10em;
   padding: 0.6em;
-  margin: 0 auto 0.2em auto;
+  margin: 0.5em auto 0.2em auto;
   display: block;
   width: 2.3em;
   text-align: center;
@@ -958,12 +958,12 @@ aside .embed-responsive {
   counter-increment: section;
   content: counters(section, "i") " ";
   position: absolute;
-  top: -0em;
+  top: 0.8em;
   right: 2.5em;
   background: #E1CB94;
   border-radius: 5em;
   font-size: 0.5em;
-  color: white;
+  color: black;
   padding: 0.3em 0.5em;
 }
 
@@ -1024,8 +1024,8 @@ aside .embed-responsive {
 }
 
 .module.module-process {
-  padding-bottom: 3em;
-  padding-top: 3em;
+  padding-bottom: 4em;
+  padding-top: 4em;
   text-align: center;
 }
 
