--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -900,6 +900,12 @@ footer a {
   padding-bottom: 3em;
 }
 
+@media screen and (max-width: 767px){
+.table-responsive {
+    overflow-y: hidden!important;
+    overflow-x: scroll!important;
+}}
+
 .module.module-products a {
   display: block;
   margin-top: 0.75em;
